chore: Upgrade to ADK 0.3.0
- Updated weather forecast instruction and model version in `HelloWeatherAgent`.
- Added optional AdkWebServer support and detailed how-to in `main()` method.
- Enhanced README with clearer setup, Dev UI usage instructions, and additional content for running the agent.
- Improved Maven configuration: updated ADK version, buffer size, and request timeout.