@@ -15,8 +15,9 @@ The following screenshot of the GitHub interface shows how you can use this temp
 > [!TIP]
 > * Check out the GitHub [documentation](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo)
 > about forking and cloning template projects.
+> * Read the [getting started guide](https://google.github.io/adk-docs/get-started/java/).
 > * Be sure to read the [ADK documentation](https://google.github.io/adk-docs/get-started/quickstart/#set-up-the-model) 
-> to better understand how the framework works.
+> to better understand how to configure the model and API key.
 
 # Setup
 
@@ -37,21 +38,41 @@ export GOOGLE_GENAI_USE_VERTEXAI=FALSE
 
 # Running the agent
 
+The `HelloWeatherAgent` class is a simple agent configured with one tool to request a canned weather forecast from any city.
+
 There are two options to run your agent: 
-* from the command-line
 * using the ADK Dev UI
+* from the command-line
+
+## Running the agent from the Dev UI
+
+The Dev UI offers a useful chat interface to interact with your agent.
+Run the command below to launch it, and open a browser at `http://localhost:8080/`.
+
+```shell
+mvn compile exec:java -Dexec.mainClass=com.example.agent.HelloWeatherAgent
+```
+
+In your browser, you can select the agent in the top left-hand corner and chat with it in the main chat space.
+In the left panel, you can explore the various events, including function calls, LLM requests, and responses,
+to understand what happens when a user converses with the agent.
+
+Here's a screenshot of the Dev UI in action for your `HelloWeatherAgent` agent:
+
+![](adk-dev-ui.png)
 
 ## Running the agent from the command-line
 
-Run the following Maven command:
+By default, the `main()` method of this agent launches the ADK Dev UI, on localhost:8080.
+You can also comment this line launching the Dev UI and instead uncomment the custom run loop, if you want to run the agent from the terminal.
+
+Type `quit` to exit the agent conversation.
+
+Run the following Maven command to launch the agent in the terminal, after having uncommented the custom run loop:
 
 ```shell
 mvn compile exec:java -Dexec.mainClass="com.example.agent.HelloWeatherAgent"
 ```
-
-The `HelloWeatherAgent` class is a simple agent configured with one tool to request a canned weather forecast from any city.
-When running the above command, you should see a similar output like the one below.
-Type `quit` to exit the agent conversation.
 
 <details>
 <summary>Expand to see the output</summary>
@@ -65,59 +86,27 @@ Type `quit` to exit the agent conversation.
 [INFO] --------------------------------[ jar ]---------------------------------
 [INFO] 
 [INFO] --- resources:3.3.1:resources (default-resources) @ adk-agents ---
-[INFO] skip non existing resourceDirectory /Users/adkuser/projects/adk-java-maven-template/src/main/resources
+[INFO] skip non existing resourceDirectory /Users/glaforge/Projects/adk-java-maven-template/src/main/resources
 [INFO] 
 [INFO] --- compiler:3.13.0:compile (default-compile) @ adk-agents ---
-[INFO] Recompiling the module because of changed source code.
-[INFO] Compiling 1 source file with javac [debug target 17] to target/classes
-[WARNING] system modules path not set in conjunction with -source 17
-[INFO] Annotation processing is enabled because one or more processors were found
-  on the class path. A future release of javac may disable annotation processing
-  unless at least one processor is specified by name (-processor), or a search
-  path is specified (--processor-path, --processor-module-path), or annotation
-  processing is enabled explicitly (-proc:only, -proc:full).
-  Use -Xlint:-options to suppress this message.
-  Use -proc:none to disable annotation processing.
+[INFO] Nothing to compile - all classes are up to date.
 [INFO] 
-[INFO] --- exec:3.5.0:java (default-cli) @ adk-agents ---
-
-You > hi
-
-Agent > Hello World
-
+[INFO] --- exec:3.6.1:java (default-cli) @ adk-agents ---
 
 You > What's the weather in Paris?
 
-Agent > The weather in Paris is: Sunny day, clear blue sky, temperature up to 24°C.
-
+Agent > The weather in Paris is sunny with a clear blue sky, and the temperature will be up to 24°C.
 
 You > quit
 [INFO] ------------------------------------------------------------------------
 [INFO] BUILD SUCCESS
 [INFO] ------------------------------------------------------------------------
-[INFO] Total time:  01:46 min
-[INFO] Finished at: 2025-05-27T11:07:54+02:00
+[INFO] Total time:  51.659 s
+[INFO] Finished at: 2025-10-12T13:07:47+02:00
 [INFO] ------------------------------------------------------------------------
 ```
 
 </details>
-
-## Running the agent from the Dev UI
-
-The Dev UI offers a useful chat interface to interact with your agent.
-Run the command below to launch it, and open a browser at `http://localhost:8080/`.
-
-```shell
-mvn compile exec:java -Dexec.mainClass="com.google.adk.web.AdkWebServer" -Dexec.classpathScope="compile"
-```
-
-In your browser, you can select the agent in the top left-hand corner and chat with it in the main chat space.
-In the left panel, you can explore the various events, including function calls, LLM requests, and responses, 
-to understand what happens when a user converses with the agent.
-
-Here's a screenshot of the Dev UI in action for your `HelloWeatherAgent` agent:
-
-![](adk-dev-ui.png)
 
 ---
 
